static/style.scss
@charset "UTF-8";

// SCSS variables
$foreground: #282828;
$background: #f1f1f1;

// Basics
html,
body {
    padding: 0;
    margin: 0;

    height: 100%;
}

body {
    display: grid;
    grid-template-rows: 1fr auto;
    flex-flow: column wrap;

    align-items: center;
    justify-items: center;

    font-family: 'Open Sans', sans-serif;
    font-size: 1em;

    background: $background;
    color: $foreground;

    box-sizing: border-box;
}

*, *::before, *::after {
    box-sizing: inherit;
}

// Typography
h1 {
    font-family: 'Dosis', sans-serif;
    font-size: 3rem;
    font-weight: 400;

    color: #282828;
    margin: 0;
}

h2 {
    font-family: 'Dosis', sans-serif;
    font-weight: 600;
    font-size: 1.3rem;
    line-height: 1.3rem;
    margin: 0 0 0.5rem 0;
}

ul {
    display: flex;

    list-style-type: none;
    padding: 0;
    margin: 0;
}

a {
    color: inherit;
    text-decoration: none;

    transition: all 0.2s ease;

    &:hover {
        color: darken(#485F6E, 50%);
    }
}

p, a, input, form {
    font-size: 1rem;
    margin: 0 0 0.5rem 0;
}


// Layout
main {
    display: grid;
    grid-template-rows: auto auto;
    grid-template-columns: auto auto;

    position: relative;

    align-items: center;

    .logo {
        height: 128px;
        padding: 1rem;
        grid-column: 1/2;
        grid-row: 1/3;

        img {
            height: 100%;
        }
    }

    .media {
        position: relative;
        max-width: 420px;

        img {
            height: 420px;
            width: auto;
        }

        video {
            height: 420px;
            width: auto;
        }
    }

    .title {
        margin: 0;
        align-self: flex-end;
        grid-row: 1/2;
    }

    nav {
        color: #485F6E;
        align-self: flex-start;
        grid-row: 2/3;

        .current {
            color: #b41b1d;
        }
    }

    section {
        grid-column: 2/3;
        grid-row: 3/4;
    }

    .text {
        max-width: 350px;
    }

    @media screen and (max-width: 900px) {

        .logo {
            height: 64px;
            padding: 0.5rem;
            margin: 0;
            justify-self: flex-end;
        }

        .title h1 {
            font-size: 2rem;
        }

        section {
            justify-self: center;
            margin: 0.5rem 0;
            grid-column: 1/3;
        }

        .media {
            img {
                height: auto;
                max-width: 100%;
                padding: 1rem;
            }
        }
    }

    span {
        color: #b41b1d;
    }
}

footer {
    align-self: flex-end;

    padding: 1rem;

    color: #485F6E;
}

h1 {
    font-family: 'Dosis', sans-serif;
    color: #282828;
    font-weight: 400;
    line-height: 3rem;
    font-size: 3rem;
    margin: 0 0 0 0;
}

h2 {
    font-family: 'Dosis', sans-serif;
    font-weight: 800;
    font-size: 1.3rem;
    line-height: 1.3rem;
    margin: 0 0 0.5rem 0;
}

p, a, input, form {
    font-size: 1rem;
    margin: 0 0 0.5rem 0;
}

a {
    color: #485F6E;
}

form {
    display: flex;
    flex-direction: row-reverse;
    align-items: center;

    input[type="file"] {
        opacity: 0;
        overflow: hidden;
        position: absolute;
        width: 0.1px;
        height: 0.1px;
    }

    label {
        display: flex;
        flex-direction: column;
        justify-content: center;
        flex: 1;
        padding: 0 0 0 1vh;
        margin: 0;
        word-break: break-all;
        color: #282828;
        transition: all 0.25s ease;

        &:hover {
            color: #b41b1d;
        }
    }

    input[type="submit"] {
        border: none;
        outline: none;
        background-color: #b41b1d;
        padding: 1vh;
        margin: 0;
        color: #f1f1f1;

        transition: all 0.25s ease;

        &:hover {
            background-color: darken(#b41b1d, 5%);
        }
    }
}

.review {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;

    button {
        margin: 0;
        padding: 1vh;
        border: none;
        outline: 0;

        color: #f1f1f1;
        background-color: #b41b1d;

        transition: all 0.25s ease;

        &:hover {
            background-color: darken(#b41b1d, 5%);
        }
    }

    .options {
        display: flex;
        justify-content: space-around;

        form {
            margin: 1vh;
        }

        input[type="text"] {
            display: none;
        }
    }
}

footer {
    padding: 1vh;
    ul {
        display: flex;

        padding: 0;
        margin: 0;
        list-style: none;

        li {
            padding: 0 1vh 0 1vh;
        }
    }
}

